# AndroidExercise

MyAndroidExcercise/NativeTest1/app/: build.gradle
MyAndroidExcercise/NativeTest1/app/src/main/cpp/: CMakeLists.txt  NQueenBT.cpp  log.h  main-jni.cpp  main-jni.h
MyAndroidExcercise/NativeTest2/: .project
MyAndroidExcercise/NativeTest2/app/: CMakeCache.txt  CMakeLists.txt  build.gradle
MyAndroidExcercise/ServiceTest1/: .project
MyAndroidExcercise/ServiceTest3/: .project
MyAndroidExcercise/ServiceTest4Client/: .project
MyAndroidExcercise/ServiceTest4Service/: .project
MyAndroidExcercise/ServiceTest5/: .project
MyAndroidExcercise/SettingsTest1/: .project
MyAndroidExcercise/UtilTest1/: .project
MyEdwin/Helloworld1/: .project
MyEdwin/Helloworld2/: .project
MyEdwin/MyBasicWidget1/: .project
MyEdwin/MyContraintLayout/: .project
MyEdwin/MyDrawable1/: .project
MyEdwin/MyFramelayout1/: .project
MyEdwin/MyLinearLayout1/: .project
MyEdwin/MyRelativeLayout1/: .project
MyEdwin/MyScrollView/: .project
MyEdwin/MyTableLayout1/: .project
MyEdwin/MyToast1/: .project
MyJavaNativeExercise/: .project
MyJavaNativeExercise/app/: build.gradle
StudioExemples/: .project  local.properties
StudioExemples/Audio-Echo/: local.properties
StudioExemples/BasicNetworking/: local.properties
StudioExemples/Hello-libs/: local.properties
StudioExemples/HelloJNI/: local.properties
StudioExemples/MessagingService/: local.properties
StudioExemples/SanAngeles/: local.properties
StudioExemples/StorageProvider/: local.properties
(+210 files in other folders)
